# oimg

./: .gitignore  AGENTS.md  README.md  apt-release.conf  justfile  pubspec.yaml
.github/workflows/: linux-debian-apt.yml  linux-debian-release.yml  macos-release.yml  windows-release.yml  windows-winget.yml
assets/animations/: manual copy 2.glsl  manual copy 4.glsl  manual copy 5.glsl  manual copy 6.glsl  manual copy 7.glsl  manual copy.glsl  manual.glsl  wavy_16_gemini_a1.glsl  wavy_16_gemini_a2.glsl  wavy_16_gemini_a3.glsl  wavy_16_gemini_a4_v1.glsl  wavy_16_gemini_a4_v2.glsl  wavy_16_gemini_a4_v3.glsl  wavy_16_gemini_a4_v4.glsl  wavy_16_gemini_a4_v5.glsl  wavy_16_gemini_a5_v1.glsl  wavy_16_gemini_a5_v2.glsl  wavy_16_gemini_a5_v3.glsl  wavy_16_gemini_a5_v4.glsl  wavy_16_gemini_a5_v5.glsl  wavy_16_gemini_a6_v1.glsl  wavy_16_gemini_a6_v2.glsl  (+10 more)
debian/: debian.yaml.in
docs/: 2026-04-07-avif-native-decode-note.md  BUILD_TODOs.md  LINUX_CI_CD_SETUP.md  MACOS_CI_CD_SETUP.md  RELEASE_INSTRUCTIONS.md  WINDOWS_CI_CD_SETUP.md
integration_test/: simple_test.dart
lib/: main.dart
linux/: CMakeLists.txt  oimg.desktop.in
rust/: Cargo.toml  README.md
rust/src/: analyze_jobs.rs  batch_jobs.rs  codec.rs  convert.rs  diagnostics.rs  error.rs  execution.rs  frb_generated.rs  fs.rs  lib.rs  metrics.rs  preview.rs  preview_artifacts.rs  service_ffi.rs  source_image.rs  types.rs
rust/src/api/: bridge.rs
rust/tests/: bridge.rs
rust_builder/: pubspec.yaml
test/: file_open_channel_test.dart  file_open_controller_test.dart  widget_test.dart
windows/: CMakeLists.txt
(+106 files in other folders)
