[package]
name = "oimg_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0.100"
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slimg-core = { path = "../../slimg/crates/slimg-core" }
slimg-exec = { path = "../../slimg/crates/slimg-exec" }
tempfile = "3.23.0"
thiserror = "2.0.17"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
tempfile = "3.23.0"
